force-app/main/default/objects/Enrollment__c.object
<CustomObject>
    <description>&quot;The Enrollment object stores the dates and status codes that define a student’s enrollment with the Academic Program. A student may have multiple Enrollment records for a single Program Enrollment. Each withdrawal and re-enrollment within the same Academic Program will generate a new Enrollment associated with the Program Enrollment.

All Enrollment records are coded with a specific school year. Enrollment records are  updated with a withdrawal date and code sent from the SIS when students withdraw from the academic program.&quot;</description>
    <fields>
        <fullName>Enrollment_Date__c</fullName>
        <description>Date Enrolled</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Enrollment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enrollment_Type__c</fullName>
        <description>Add for ITR Events</description>
        <label>Enrollment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initial Enrollment</fullName>
                </value>
                <value>
                    <fullName>Re-enrolling student</fullName>
                </value>
                <value>
                    <fullName>Returning Student</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Future_Plans__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Future Plans</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Integration_Status__c</fullName>
        <description>This field will be populated once the Event &apos;Enrollment Event&apos; is published as part of ADO US # 334984</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Integration Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCx_CorrelationId__c</fullName>
        <description>This field returns the EnrollmentId+Current Date Time as a GUID and being used in &apos;CS_EventNotification2V2Systems&apos; flow as part of ADO US # 334984</description>
        <formula>Id + TEXT(MONTH(TODAY())) + TEXT(DAY(TODAY())) + TEXT(HOUR(TIMENOW())) + TEXT(MINUTE(TIMENOW())) + TEXT(SECOND(TIMENOW())) + TEXT(MILLISECOND(TIMENOW()))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PCx CorrelationId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Enrollment__c</fullName>
        <description>Child records can be reparented to other parent records after they are created</description>
        <label>Program Enrollment</label>
        <referenceTo>hed__Program_Enrollment__c</referenceTo>
        <relationshipLabel>Enrollments</relationshipLabel>
        <relationshipName>Enrollments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>School_Year__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The School Year record for the year the data is relevant for.</description>
        <label>School Year</label>
        <referenceTo>School_Year__c</referenceTo>
        <relationshipLabel>Enrollments</relationshipLabel>
        <relationshipName>Enrollments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>V2_External_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>V2 External ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Withdrawal_Category__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Withdrawal Category</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Withdrawal_Code__c</fullName>
        <description>Chancery Withdrawal Code (First Withdrawal)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Withdrawal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Withdrawal_Date__c</fullName>
        <description>Withdrawal Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Withdrawal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Withdrawal_Notes__c</fullName>
        <description>Withdrawal Notes</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Withdrawal Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Withdrawal_Reason__c</fullName>
        <description>Withdrawal Reason</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Withdrawal Reason</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>Enrollment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Enrollment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enrollments</pluralLabel>
    <recordTypes>
        <fullName>Student</fullName>
        <active>true</active>
        <label>Student</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>